# dexchain

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
examples/contract-erc20/: package.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/ethereum/: Cargo.toml
pallets/ethereum-chain-id/: Cargo.toml
pallets/ethereum-chain-id/src/: lib.rs  mock.rs  tests.rs
pallets/ethereum/src/: lib.rs
pallets/evm-accounts/: Cargo.toml
pallets/evm-accounts/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
polkadot-js/: ext-types.json
precompiles/randomness/: Cargo.toml  randomness.sol
precompiles/randomness/src/: lib.rs  mock.rs  tests.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/macro/src/: lib.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/src/: data.rs  lib.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs  precompiles.rs
runtime/src/weights/: frame_system.rs  mod.rs  pallet_balances.rs  pallet_collective.rs  pallet_democracy.rs  pallet_elections_phragmen.rs  pallet_evm_accounts.rs  pallet_identity.rs  pallet_scheduler.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs
scripts/: docker_run.sh
specs/: testnet.json
templates/: runtime-weight-template.hbs
