[package]
authors = ["Dexchain Technologies <dex.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "pallet-ethereum-chain-id"
version = "0.6.0"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "frontier" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "frontier" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

primitives = { package = "dexchain-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"


[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "primitives/std",
]
