[package]
name = "precompile-utils"
version = "0.1.0"
authors = ["Dexchain Technologies <dex.io>"]
edition = "2018"
description = "Utils to write EVM precompiles."

[dependencies]
log = "0.4"
sha3 = { version = "0.9", default-features = false }
num_enum = { version = "0.5.3", default-features = false }

sp-std = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }

pallet-evm = { git = "https://github.com/dexioorg/frontier", branch = "master", default-features = false }
evm = { version = "0.25.0", default-features = false, features = ["with-codec"] }

precompile-utils-macro = { path = "macro" }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-evm/std",
    "evm/std",
]
